package com.ofdun.jobfinder.cli.dto.auth;

public record LoginRequest(String email, String password) {}
